--- a/.github/workflows/go_build.yml
+++ b/.github/workflows/go_build.yml
@@ -19,5 +19,8 @@ jobs:
         go-version: 1.18
 
     - name: Build
-      run: go build -v ./...
+      run: go build -v -o coffee_api ./...
+      
+    - name: Start App
+      run: ./coffee_api
 
