--- a/.github/workflows/go_build.yml
+++ b/.github/workflows/go_build.yml
@@ -19,7 +19,7 @@ jobs:
         go-version: 1.18
 
     - name: Build
-      run: go build -v -o coffee_api ./...
+      run: go build -v ./...
       
     - name: Start App
       run: ./coffee_api
