--- a/.github/workflows/go_build.yml
+++ b/.github/workflows/go_build.yml
@@ -21,6 +21,9 @@ jobs:
     - name: Build
       run: go build -v ./...
       
-    - name: Start App
-      run: ./coffee_api
+    - name: Install App
+      run: go install 
+      
+    - name: Run App
+      run: ./$GOPATH/bin/coffee_api
 
