--- a/.github/workflows/go_build.yml
+++ b/.github/workflows/go_build.yml
@@ -1,4 +1,4 @@
-name: Go
+name: Go_build
 
 on:
   push:
@@ -17,14 +17,14 @@ jobs:
       uses: actions/setup-go@v3
       with:
         go-version: 1.18
+        
+    - name: Verify dependencies
+      run: go mod verify
 
     - name: Build
       run: go build -v ./...
+       
       
-    - name: Install App
-      run: go install 
-      
-    - name: Run App
-      run: pwd
+
       
 
